; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/dz60/keymaps/marianas/extr_relativity.c_eraseCharCounts.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/dz60/keymaps/marianas/extr_relativity.c_eraseCharCounts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@countPointer = common dso_local global i64 0, align 8
@charCount = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @eraseCharCounts() #0 {
  br label %1

1:                                                ; preds = %4, %0
  %2 = load i64, i64* @countPointer, align 8
  %3 = icmp ugt i64 %2, 0
  br i1 %3, label %4, label %10

4:                                                ; preds = %1
  %5 = load i64*, i64** @charCount, align 8
  %6 = load i64, i64* @countPointer, align 8
  %7 = getelementptr inbounds i64, i64* %5, i64 %6
  store i64 0, i64* %7, align 8
  %8 = load i64, i64* @countPointer, align 8
  %9 = add i64 %8, -1
  store i64 %9, i64* @countPointer, align 8
  br label %1

10:                                               ; preds = %1
  %11 = load i64*, i64** @charCount, align 8
  %12 = load i64, i64* @countPointer, align 8
  %13 = getelementptr inbounds i64, i64* %11, i64 %12
  store i64 0, i64* %13, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
